force-app/main/default/objects/Application_Log__c/fields/AdditionalPayload__c.field-meta.xml
<CustomField>
    <fullName>AdditionalPayload__c</fullName>
    <description>holds additional payload if the payload size beyond the text area maximum characters</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Additional Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>