force-app/main/default/objects/Application_Log__c/fields/Application_Log__c.field-meta.xml
<CustomField>
    <fullName>Application_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Log</label>
    <referenceTo>Application_Log__c</referenceTo>
    <relationshipLabel>Application Logs</relationshipLabel>
    <relationshipName>Application_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>