force-app/main/default/objects/Application_Log__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>The URL for the endpoint of the external service for the HTTP request</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>