force-app/main/default/objects/Application_Log__c/fields/Exception_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Exception_Reference_Number__c</fullName>
    <formula>Application_Log__r.ReferenceNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Number</label>
    <type>Text</type>
</CustomField>