force-app/main/default/objects/Application_Log__c/fields/Exception_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Exception_Stack_Trace__c</fullName>
    <description>The stack trace of exception.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>