force-app/main/default/objects/Application_Log__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Integration Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>