force-app/main/default/objects/Application_Log__c/fields/IntegrationLogStatus__c.field-meta.xml
<CustomField>
    <fullName>IntegrationLogStatus__c</fullName>
    <formula>Application_Log__r.Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Integration Log Status</label>
    <type>Text</type>
</CustomField>