force-app/main/default/objects/Application_Log__c/fields/IntegrationTrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>IntegrationTrackingNumber__c</fullName>
    <formula>Application_Log__r.TrackingNumber__c</formula>
    <label>Integration Tracking Number</label>
    <type>Text</type>
</CustomField>