force-app/main/default/objects/Application_Log__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Related To</label>
    <length>20</length>
    <type>Text</type>
</CustomField>