force-app/main/default/objects/Application_Log__c/fields/Request_Payload__c.field-meta.xml
<CustomField>
    <fullName>Request_Payload__c</fullName>
    <description>The body of the HTTP request.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Request Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>