force-app/main/default/objects/Application_Log__c/fields/Response_Payload__c.field-meta.xml
<CustomField>
    <fullName>Response_Payload__c</fullName>
    <description>The body returned in the HTTP response.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>