force-app/main/default/objects/Application_Log__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>Name of the source system making the inbound call into Salesforce.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Source System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>