force-app/main/default/objects/Application_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Operation status.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>