force-app/main/default/objects/Application_Log__c/recordTypes/Auto_Log.recordType-meta.xml
<RecordType>
    <fullName>Auto_Log</fullName>
    <active>true</active>
    <description>To store the log information for automatic notification process</description>
    <label>Auto Log</label>
</RecordType>