force-app/main/default/objects/Application_Log__c/recordTypes/ExceptionLog.recordType-meta.xml
<RecordType>
    <fullName>ExceptionLog</fullName>
    <active>true</active>
    <label>Exception Log</label>
</RecordType>