force-app/main/default/objects/Application_Log__c/recordTypes/IntegrationLog.recordType-meta.xml
<RecordType>
    <fullName>IntegrationLog</fullName>
    <active>true</active>
    <label>Integration Log</label>
</RecordType>