force-app/main/default/objects/Application_Log__c/listViews/Actionable_Exceptions_Multiple_Bus.listView-meta.xml
<ListView>
    <fullName>Actionable_Exceptions_Multiple_Bus</fullName>
    <booleanFilter>1 AND 7 AND 8 AND 9 AND (2 OR 3 OR 4 OR 5 OR 6)</booleanFilter>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Application_Name__c</columns>
    <columns>Application_Log__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Exception</value>
    </filters>
    <filters>
        <field>Application_Name__c</field>
        <operation>contains</operation>
        <value>Claim Event,Publish Error,WEBTEXT,Omni_TaskGenerator</value>
    </filters>
    <filters>
        <field>Application_Name__c</field>
        <operation>equals</operation>
        <value>Email Exception,Email Sending Error,Email Message Trigger,Messaging</value>
    </filters>
    <filters>
        <field>Application_Name__c</field>
        <operation>contains</operation>
        <value>ECM,EOC</value>
    </filters>
    <filters>
        <field>Application_Name__c</field>
        <operation>equals</operation>
        <value>Handler Processed Bulk exception,ECM Processed Exceptions</value>
    </filters>
    <filters>
        <field>Application_Name__c</field>
        <operation>equals</operation>
        <value>File Metadata Created Exception</value>
    </filters>
    <filters>
        <field>IntegrationLogStatus__c</field>
        <operation>notEqual</operation>
        <value>Exception Retry</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/19/2020 7:00 PM</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Failure</value>
    </filters>
    <label>Actionable Exceptions Multiple Bus</label>
    <language>en_US</language>
</ListView>