force-app/main/default/objects/Application_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application_Name__c</columns>
    <columns>Category__c</columns>
    <columns>Integration_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Transaction_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>