force-app/main/default/objects/Application_Log__c/listViews/All_Exceptions.listView-meta.xml
<ListView>
    <fullName>All_Exceptions</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Application_Name__c</columns>
    <columns>Application_Log__c</columns>
    <columns>Description__c</columns>
    <columns>Exception_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Exception</value>
    </filters>
    <label>All Exceptions</label>
    <language>en_US</language>
</ListView>