force-app/main/default/objects/Application_Log__c/listViews/ECM_Integration_Logs.listView-meta.xml
<ListView>
    <fullName>ECM_Integration_Logs</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Application_Name__c</columns>
    <columns>Category__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Name__c</field>
        <operation>contains</operation>
        <value>ECM,Handler Processed Platform Event</value>
    </filters>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Integration</value>
    </filters>
    <label>ECM Integration Logs</label>
    <language>en_US</language>
</ListView>