force-app/main/default/objects/Application_Log__c/listViews/Email_Logs.listView-meta.xml
<ListView>
    <fullName>Email_Logs</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Application_Name__c</columns>
    <columns>Category__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Integration</value>
    </filters>
    <filters>
        <field>Application_Name__c</field>
        <operation>contains</operation>
        <value>Email Log</value>
    </filters>
    <label>Email Logs</label>
    <language>en_US</language>
</ListView>