force-app/main/default/objects/Application_Log__c/listViews/Exception_Logs.listView-meta.xml
<ListView>
    <fullName>Exception_Logs</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Application_Name__c</columns>
    <columns>Application_Log__c</columns>
    <columns>Description__c</columns>
    <columns>Exception_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Exception</value>
    </filters>
    <label>Exception Logs</label>
</ListView>