force-app/main/default/objects/Application_Log__c/listViews/Failed_ECM_Ingestion.listView-meta.xml
<ListView>
    <fullName>Failed_ECM_Ingestion</fullName>
    <booleanFilter>(1 AND 2 AND 3)  OR ( 4 AND 5)</booleanFilter>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Application_Name__c</columns>
    <columns>Application_Log__c</columns>
    <columns>Category__c</columns>
    <columns>Description__c</columns>
    <columns>Exception_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Exception</value>
    </filters>
    <filters>
        <field>Application_Name__c</field>
        <operation>equals</operation>
        <value>ECM Create Batch Request Exception</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Failure</value>
    </filters>
    <filters>
        <field>Application_Name__c</field>
        <operation>equals</operation>
        <value>Handler Processed Platform Event</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Processed</value>
    </filters>
    <label>Failed ECM Ingestion</label>
    <language>en_US</language>
</ListView>