force-app/main/default/objects/Application_Log__c/listViews/Integration_Logs.listView-meta.xml
<ListView>
    <fullName>Integration_Logs</fullName>
    <columns>NAME</columns>
    <columns>Application_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Transaction_Id__c</columns>
    <columns>Source_System__c</columns>
    <filterScope>Everything</filterScope>
    <label>Integration Logs</label>
</ListView>