force-app/main/default/objects/Application_Log__c/listViews/Task_Generator_Exception.listView-meta.xml
<ListView>
    <fullName>Task_Generator_Exception</fullName>
    <columns>NAME</columns>
    <columns>Application_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Name__c</field>
        <operation>equals</operation>
        <value>Omni_TaskGenerator</value>
    </filters>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Exception</value>
    </filters>
    <label>Task Generator Exception</label>
    <language>en_US</language>
</ListView>